--- a/app/Components/Backgrounds/wavylines.css
+++ b/app/Components/Backgrounds/wavylines.css
@@ -1,9 +1,13 @@
 
+:root {
+    --bg-transparency: 0
+}
+
 .body {
     margin: auto;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: auto;
-    background: linear-gradient(315deg, rgba(101,0,94,0.1) 3%, rgba(60,132,206,0.1) 38%, rgba(48,238,226,0.1) 68%, rgba(255,25,25,0.1) 98%);
+    background: linear-gradient(315deg, rgba(101,0,94,var(--bg-transparency)) 3%, rgba(60,132,206,var(--bg-transparency)) 38%, rgba(48,238,226,var(--bg-transparency)) 68%, rgba(255,25,25,var(--bg-transparency)) 98%);
     animation: gradient 15s ease infinite;
     background-size: 400% 400%;
     background-attachment: fixed;
